# OptimizationProject

Task0/CppVersion/: CMakeLists.txt  Subject_solution.cpp  Subject_solution.h  algo.cpp  algo.h  box.cpp  boxPlot.py  con.py  convergence.csv  convertion.cpp  draw.py  ga  ga.cpp  ga_pm_results.csv  heatmap.py  load.cpp  load.h  main  main.cpp  main2  parametersComparison.cpp  plotParams.py  radar.py  results.csv
Task0/CppVersion/include/: Subject_solution.h  algo.h  load.h
Task0/CppVersion/main/: box.cpp  convertion.cpp  main.cpp  pm_analysis.cpp  population_analysis.cpp  px_analysis.cpp  tournament_analysis.cpp
Task0/CppVersion/main/results/: Comparison_tai500_20_0.csv  algorithm_comparison.csv  best_sequences(T100-10).txt  best_sequences(T100-20).txt  convergence_ga.csv  convergence_ga_tai20_10_0.csv  convergence_ga_tai500_20_0.csv  convergence_summary.txt  convergence_summary_tai20_10_0.txt  convergence_summary_tai500_20_0.txt  ga_param_study.csv  pm_analysis.csv  pm_raw_tai20_20_0.csv  pm_summary.csv  pm_summary_tai20_20_0.csv  pm_summary_tai20_5_0.csv  population_analysis.csv  population_analysis_tai20_5_0.csv  population_analysis_tai500_20_0.csv  population_raw_tai20_20_0.csv  population_summary.csv  population_summary_tai20_20_0.csv  population_summarytai20_5_0.csv  px_analysis.csv  px_analysis_tai20_5_0.csv  px_analysis_tai500_20_0.csv  px_raw_tai20_20_0.csv  px_summary.csv  results.csv  (+9 more)
Task0/CppVersion/results/: best_sequences(T20-20).txt  best_sequences(T20-5).txt  best_sequences(T500-20).txt
Task0/CppVersion/src/: Subject_solution.cpp  algo.cpp  load.cpp
(+15 files in other folders)
